--- a/css/ysp.css
+++ b/css/ysp.css
@@ -75,8 +75,29 @@ section{
 	z-index: -1;
 	top: 0;
 	left: 0;
-	width: 100%;
+	width:100%;
 	height: 100%;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
+}
+
+.fullbredde-seksjon_parralax{
+	position: relative;
+	padding-top:400px;
+	padding-bottom:100px;
+}
+
+.parallax_2{
+	position: absolute;
+	background-attachment: fixed;
+	background-position: top center;
+	z-index: -1;
+	top: 0;
+	left: 0;
+	width:100%;
+	height: 500px;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
