--- a/css/ysp.css
+++ b/css/ysp.css
@@ -376,3 +376,89 @@ animation: pilhopp 1s alternate infinite;
 -o-animation: pilhopp 1s alternate infinite;
 }
 
+#preloader {
+	position: fixed;
+	top:0;
+	left:0;
+	right:0;
+	bottom:0;
+    width:100%;
+    height:100%;
+	background-color:#eee; 
+    z-index:9999;
+}
+.loading {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -moz-transform: translateX(-50%) translateY(-50%);
+  -webkit-transform: translateX(-50%) translateY(-50%);
+  transform: translateX(-50%) translateY(-50%)
+}
+.loader{
+	width: 75px;
+	height: 75px;
+	border-radius: 50%;
+	border: 3px solid transparent;
+	border-top-color: #f1c40f;
+	-webkit-animation: rotate 2s linear infinite;
+	-moz-animation: rotate 2s linear infinite;
+	-ms-animation: rotate 2s linear infinite;
+	-o-animation: rotate 2s linear infinite;
+	animation: rotate 2s linear infinite;
+}
+.loader:before {
+	content: "";
+	position: absolute;
+	top: 5px;
+	left: 5px;
+	right: 5px;
+	bottom: 5px;
+	border-radius: 50%;
+	border: 3px solid transparent;
+	border-top-color: #3498db;
+	-webkit-animation: rotate 3s linear infinite;
+	-moz-animation: rotate 3s linear infinite;
+	-ms-animation: rotate 3s linear infinite;
+	-o-animation: rotate 3s linear infinite;
+	animation: rotate 3s linear infinite;
+}
+.loader:after {
+	content: "";
+	position: absolute;
+	top: 12px;
+	left: 12px;
+	right: 12px;
+	bottom: 12px;
+	border-radius: 50%;
+	border: 3px solid transparent;
+	border-top-color: #2ecc71;
+	-webkit-animation: rotate 1.5s linear infinite;
+	-moz-animation: rotate 1.5s linear infinite;
+	-ms-animation: rotate 1.5s linear infinite;
+	-o-animation: rotate 1.5s linear infinite;
+	animation: rotate 1.5s linear infinite;
+}
+
+/*rotate*/
+@keyframes rotate{
+	0% {transform:rotate(0deg);}
+	100% {transform:rotate(360deg);}
+}
+@-webkit-keyframes rotate{
+	0% {-webkit-transform:rotate(0deg);}
+	100% {-webkit-transform:rotate(360deg);}
+}
+@-moz-keyframes rotate{
+	0% {-moz-transform:rotate(0deg);}
+	100% {-moz-transform:rotate(360deg);}
+}
+@-o-keyframes rotate{
+	0% {-o-transform:rotate(0deg);}
+	100% {-o-transform:rotate(360deg);}
+}
+@-ms-keyframes rotate{
+	0% {-ms-transform:rotate(0deg);}
+	100% {-ms-transform:rotate(360deg);}
+
+
