--- a/css/ysp_color.css
+++ b/css/ysp_color.css
@@ -1,6 +1,6 @@
 .navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li.active > a, .navbar-default .navbar-nav > li:hover > a, .navbar-default .navbar-nav > li.active > a:hover{
 	color: #f56363;
-	background-color: #faebd7;
+	background-color: transparent;
 }
 
 .navbar-default .navbar-nav > li.active > a:focus{
@@ -8,8 +8,8 @@
 }
 
 .navbar .social-icons i:hover{
-	color: #f56363;
-}
+	color: #f56363; 
+} 
 
 .btn-primary, a.btn-primary{
 	background-color: #f56363;
@@ -22,16 +22,15 @@ a.btn-outline.btn-primary, .btn-outline.btn-primary{
 
 a.btn-outline.btn-primary:hover, a.btn-outline.btn-primary.active, a.btn-outline.btn-primary:active, a.btn-outline.btn-primary:focus,
 .btn-outline.btn-primary:hover, .btn-outline.btn-primary.active, .btn-outline.btn-primary:active, .btn-outline.btn-primary:focus {
-	background-color: #f56363;
+	background-color: #f56363; 
 }
-
 a.btn-outline.btn-white:hover, a.btn-outline.btn-white.active, a.btn-outline.btn-white:active, a.btn-outline.btn-white:focus,
 .btn-outline.btn-white:hover, .btn-outline.btn-white.active, .btn-outline.btn-white:active, .btn-outline.btn-white:focus {
-	color: #f56363;
+	color: #f56363; 
 }
 
 a:active, a:hover{
-	color: #f56363;
+	color: #f56363; 
 }
 
 .color-primary{
@@ -47,7 +46,7 @@ a:active, a:hover{
 }
 
 .scrollopp i:hover{
-	background-color: #f56363;
+	background-color: #f56363; 
 }
 
 .social-icons i:hover{
